docs for profile module added
